--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "amateur-radio-cmap-core"
-version = "0.1.0"
+version = "1.0.0-alpha.1"
 edition = "2024"
+
+[lib]
+name = "amateur_radio_cmap_core"
+crate-type = ["rlib", "cdylib", "staticlib"]
 
 [dependencies]
 approx = "0.5.1"
